# mini

./: .gitignore  CMakeLists.txt  easytab.h  mini.cpp  paintExample.cpp
audio/: CMakeLists.txt  audioHelpers.h  cWinAudio16.cpp  cWinAudio32.cpp  cWinAudio32.h  kiss_fft.c  kiss_fft.h
common/: CMakeLists.txt  basicTypes.h  cDvbUtils.cpp  cFileList.h  cLog.cpp  cLog.h  fileUtils.h  readerWriterQueue.h  utils.cpp  utils.h
decoders/: CMakeLists.txt  cFFmpegAudioDecoder.cpp  fpng.cpp  fpng.h  lodepng.cpp  stb_image.h
examples/jpegWindow/: cJpegLoader.h
gui/: CMakeLists.txt  basicBoxes.h  cCalenderBox.h  cClockBox.h  cD2dWindow.cpp  cDateBox.h  cDrawAA.h  cDrawTexture.cpp  cDrawTexture.h  cFileListBox.h  cIndexBox.h  cListBox.h  cLogBox.h  cMiniWindow.cpp  cTexture.cpp  cTexture.h  cTextureBox.h  cWindow.cpp  cWindow.h  cWindowBox.h  freeSansBold.cpp  freeSansBold.h  stb_truetype.h
include/Simd/: SimdLib.h
include/ffmpeg/libavutil/: ffversion.h
jpegWindowToBeRewritten/: cJpegLoader.cpp  iImage.h  jpegWindow.cpp
lib/arm64/: libtbb.so.12
lib/windows64/: Simd.lib  tbb12.lib  tbb12_debug.lib
lib64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib  tbb12.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib
miniFB/: CMakeLists.txt  MiniFB.h  MiniFB_GL.cpp  MiniFB_GL.h  MiniFB_common.cpp  MiniFB_cpp.cpp  MiniFB_internal.cpp  MiniFB_internal.h  MiniFB_linux.cpp  MiniFB_timer.cpp  WinMiniFB.cpp  WindowData.h  WindowData_Win.h  WindowData_X11.h  X11MiniFB.cpp  cMiniFB.cpp  cMiniFB.h  cMiniFBwindows.cpp  cMiniFBx11.cpp  miniFB.cpp  miniFB.h  miniFBcpp.cpp  miniFBcpp.h  miniFBenums.h  miniFBgl.cpp  miniFBgl.h  miniFBinternal.cpp  miniFBinternal.h  miniFBlinux.cpp  miniFBtimer.cpp  miniFBwin.cpp  miniFBwindows.cpp  miniFBx11.cpp  pktDef.h  sInfo.h  sInfoWindows.h  sInfoX11.h  sWindowData.h  sWindowDataWindows.h  sWindowDataX11.h  (+4 more)
miniFB/include/: MiniFB.h  MiniFB_cpp.h  MiniFB_enums.h
miniFB/src/: MiniFB_common.cpp  MiniFB_cpp.cpp  MiniFB_internal.h  MiniFB_linux.cpp  WindowData.h  easytab.h
miniFB/src/gl/: MiniFB_GL.cpp  MiniFB_GL.h
miniFB/src/windows/: WinMiniFB.cpp  WindowData_Win.h  winTab.h
miniFB/src/x11/: WindowData_X11.h  X11MiniFB.cpp
mySimd/: CMakeLists.txt  SimdBaseGray.cpp  SimdBaseInterleave.cpp  SimdBaseTransform.cpp  SimdBaseYuv.cpp
mySimd/Simd/: SimdAlignment.h  SimdAvx2.h  SimdCompare.h  SimdConst.h  SimdEmpty.h  SimdExtract.h  SimdPixel.h  SimdPoint.h
mySimd/avx512/: SimdAvx512Gray.cpp  SimdAvx512Resizer.cpp
mySimd/sse41/: SimdSse41Interleave.cpp  SimdSse41ResizeBilinear.cpp  SimdSse41WarpAffine.cpp  SimdSse41Yuv.cpp
net/: CMakeLists.txt  cHttp.cpp
paint/: CMakeLists.txt  cPaint.cpp  cPaint.h  cPaintBox.cpp  cPaintBox.h
simd/: CMakeLists.txt  SimdAvx1.cpp  SimdBaseCopyFillAlpha.cpp  SimdBaseFloat32.cpp  SimdBaseGray.cpp  SimdBaseInterleave.cpp  SimdBaseResizeBilinear.cpp  SimdBaseResizer.cpp  SimdBaseRgb.cpp  SimdBaseTransform.cpp  SimdBaseYuv.cpp  SimdCpu.cpp  SimdLib.cpp  SimdLib.h
simd/Simd/: SimdAlphaBlending.h  SimdArray.h  SimdAvx1.h  SimdAvx2.h  SimdAvx512.h  SimdBase.h  SimdCompare.h  SimdConfig.h  SimdConst.h  SimdConversion.h  SimdCopyPixel.h  SimdCpu.h  SimdDefs.h  SimdDeinterleave.h  SimdEnable.h  SimdExtract.h  SimdInit.h  SimdInterleave.h  SimdLoad.h  SimdLoadBlock.h  SimdLog.h  SimdMath.h  SimdMemory.h  SimdParallel.h  SimdPerformance.h  SimdPixel.h  SimdResizer.h  SimdResizerCommon.h  SimdRuntime.h  SimdSet.h  SimdSse41.h  SimdStore.h  SimdStream.h  SimdTransform.h  SimdUnpack.h  SimdUpdate.h  SimdVersion.h  SimdView.h  SimdWarpAffine.h  SimdWarpAffineCommon.h  (+1 more)
simd/avx2/: SimdAvx1.cpp  SimdAvx2FillAlpha.cpp  SimdAvx2Float32.cpp  SimdAvx2Gray.cpp  SimdAvx2Interleave.cpp  SimdAvx2ResizeBilinear.cpp  SimdAvx2Resizer.cpp  SimdAvx2Rgb.cpp  SimdAvx2Transform.cpp  SimdAvx2WarpAffine.cpp  SimdAvx2Yuv.cpp
simd/avx512/: SimdAvx512FillAlpha.cpp  SimdAvx512Float32.cpp  SimdAvx512Gray.cpp  SimdAvx512Interleave.cpp  SimdAvx512ResizeBilinear.cpp  SimdAvx512Resizer.cpp  SimdAvx512Rgb.cpp  SimdAvx512Transform.cpp  SimdAvx512WarpAffine.cpp  SimdAvx512Yuv.cpp
simd/sse41/: SimdSse41FillAlpha.cpp  SimdSse41Float32.cpp  SimdSse41Gray.cpp  SimdSse41Interleave.cpp  SimdSse41ResizeBilinear.cpp  SimdSse41Resizer.cpp  SimdSse41Rgb.cpp  SimdSse41Transform.cpp  SimdSse41WarpAffine.cpp  SimdSse41Yuv.cpp
song/: CMakeLists.txt  cDvbSource.cpp  cDvbSource.h  cDvbUtils.cpp  cDvbUtils.h  cSong.cpp  cSong.h  cSongLoader.cpp  cSongLoader.h  cSongLoaderBox.cpp  cSongLoaderBox.h  cSongPlayer.cpp  cSongVideoPool.cpp  iVideoPool.h
tiledMap/: CMakeLists.txt  cTiledMap.cpp  cTiledMap.h  cTiledMapBox.cpp  cTiledMapBox.h  cTiledMapOverviewBox.cpp  cTiledMapOverviewBox.h
unused/simd/: SimdBaseCopyFillAlpha.cpp  SimdBaseFloat32.cpp  SimdBaseWarpAffine.cpp  SimdLib.cpp
unused/simd/Simd/: SimdArray.h  SimdAvx1.h  SimdDefs.h  SimdDeinterleave.h  SimdInit.h  SimdInterleave.h  SimdLoadBlock.h  SimdMath.h  SimdMemory.h  SimdPyramid.h  SimdRectangle.h  SimdResizerCommon.h  SimdStore.h  SimdUnpack.h
unused/simd/avx2/: SimdAvx2Gray.cpp  SimdAvx2ResizeBilinear.cpp
unused/simd/avx512/: SimdAvx512Yuv.cpp
unused/simd/sse41/: SimdSse41FillAlpha.cpp  SimdSse41Rgb.cpp
wacom/: pen.c  touch  touch.c
wacomXevents/: comp.txt  pen  pen.c  touch.c  xinput  xinput.c
windowsLib64/: Vsx.lib  freetype.lib  glfw3.lib  tbbmalloc_debug.lib
windowsLib64/Simd/: Vmx.lib
